--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ twsfe_releases
 example_json.txt
 googleapi.txt
 gtInit.html
+jquery.min.js
 old_tk_content.js
+old_audio_code.js
 src/.web-extension-id
 src/web-ext-artifacts
